sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: '(' expected but identifier found.
		if getValeur(i:Int)>getValeur(i+1:Int) {
                   ^AlgBubbleSort1:11: error: illegal start of simple expression
	}
        ^